@@ -2,6 +2,7 @@
 [A-Za-z]\+[A-Za-z0-9]
 DESCRIPTION_Author
 ^MM
+^M1mac
 ^Resnikoff
 _CRAN
 [a-z]_README
