@@ -190,6 +190,7 @@ export(
   , qnormR, qnormR1
   , qntR, qntR1
   , qtAppr
+  , qtNappr
   , qtU, qtU1
   , qtR, qtR1
   , r_pois, r_pois_expr
